# truthRAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ui  Makefile  README.md  README.tr.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  analytics.py  config.py  conversation.py  utils.py
src/agents/: __init__.py  generator.py  grader.py  hallucination_checker.py  query_expander.py  web_search.py
src/api/: __init__.py  main.py
src/evaluation/: ragas_eval.py
src/ingestion/: __init__.py  embedder.py  loader.py
src/pipeline/: __init__.py  graph.py
src/retrieval/: __init__.py  reranker.py  retriever.py
tests/: conftest.py  test_analytics.py  test_api.py  test_conversation.py  test_generator.py  test_grader.py  test_hallucination.py  test_hybrid_search.py  test_pipeline.py  test_utils.py  test_web_search.py
ui/: app.py
